--- a/Healthify/templates/index.html
+++ b/Healthify/templates/index.html
@@ -22,6 +22,30 @@
         </div>
     </nav>
 
+    <!-- alert -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category,message in messages %}
+        {% if category='error' %}
+        <div class="alert alert-danger alert-dismissable fade show" role="alert">
+            {{message}}
+            <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    &times;
+                </span>
+            </button>
+        </div>
+        {% else %}
+        <div class="alert alert-success alert-dismissable fade show" role="alert">
+            {{message}}
+            <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    &times;
+                </span>
+            </button>
+        </div>
+        {% endif %}{% endfor %}{% endif %}{% endwith %}
+
     <!-- Landing Page  -->
     <section class="landingPage">
         <img src="../static/img/Landing.png" width="1200px">
