--- a/Healthify/templates/index.html
+++ b/Healthify/templates/index.html
@@ -23,28 +23,23 @@
     </nav>
 
     <!-- alert -->
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        {% for category,message in messages %}
-        {% if category='error' %}
-        <div class="alert alert-danger alert-dismissable fade show" role="alert">
-            {{message}}
-            <button type="button" class="close" data-dismiss="alert">
-                <span aria-hidden="true">
-                    &times;
-                </span>
-            </button>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+        messages %} {% for category, message in messages %} {% if category ==
+        'error' %}
+        <div class="alert alert-danger alter-dismissable fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         {% else %}
-        <div class="alert alert-success alert-dismissable fade show" role="alert">
-            {{message}}
-            <button type="button" class="close" data-dismiss="alert">
-                <span aria-hidden="true">
-                    &times;
-                </span>
-            </button>
+        <div class="alert alert-success alter-dismissable fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        {% endif %}{% endfor %}{% endif %}{% endwith %}
+        {% endif %} {% endfor %} {% endif %} {% endwith %}
 
     <!-- Landing Page  -->
     <section class="landingPage">
@@ -88,11 +83,22 @@
         <div class="signin-right">
             <div class="siginright-details">
                 <h1 class="signinright-h1">Show Up</h1>
-                <div class="input-div">
+                <!-- <div class="input-div">
                     <input type="text" class="signin-input">
                     <input type="password" class="signin-input">
                     <button class="blackbtn signin-btn">Get Access</button>
-                </div>
+                </div> -->
+                <form method="POST">
+                    <div class="form-group">
+                        <!-- <label for="email">Email Address</label> -->
+                        <input type="email" class="signin-input" id="email" name="email" placeholder="Enter email-address"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="signin-input" id="password" name="password" placeholder="Enter password"/>
+                    </div>
+                    <br/>
+                    <button type="submit" class="blackbtn signin-btn">Get Access</button>
+                </form>
             </div>
         </div>
     </section>
