--- a/Healthify/templates/signup.html
+++ b/Healthify/templates/signup.html
@@ -8,6 +8,25 @@
   </head>
   <body>
 
+    <!-- alert -->
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+      messages %} {% for category, message in messages %} {% if category ==
+      'error' %}
+      <div class="alert alert-danger alter-dismissable fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% else %}
+      <div class="alert alert-success alter-dismissable fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endif %} {% endfor %} {% endif %} {% endwith %}
+
     <form method="POST">
         <h3>Sign-Up</h3>
         <div class="form-group">
@@ -15,7 +34,7 @@
             <input type="email" class="form-control" id="email" name="email" placeholder="Enter email-address"/>
         </div>
         <div class="form-group">
-            <label for="name">Email Address</label>
+            <label for="name">Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name"/>
         </div>
         <div class="form-group">
