--- a/Healthify/templates/signin.html
+++ b/Healthify/templates/signin.html
@@ -4,42 +4,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Healthify-Log-in</title>
+    <link href="../static/css/nav.css" rel="stylesheet">
+    <link href="../static/css/index.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
 
     <!-- alert -->
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
-      messages %} {% for category, message in messages %} {% if category ==
-      'error' %}
-      <div class="alert alert-danger alter-dismissable fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% else %}
-      <div class="alert alert-success alter-dismissable fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endif %} {% endfor %} {% endif %} {% endwith %}
+    messages %} {% for category, message in messages %} {% if category ==
+    'error' %}
+    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+      {{ message }}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% else %}
+    <div class="alert alert-success alter-dismissable fade show" role="alert">
+      {{ message }}
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-    <form method="POST">
-        <h3>Log-In</h3>
-        <div class="form-group">
-            <label for="email">Email Address</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email-address"/>
+    <section class="signin">
+        <div class="signin-left">
+            <div class="signinleft-details">
+                <h1 class="signinleft-h1">Doctors</h1>
+                <h1 class="signinleft-h1">Assemble !</h1>
+                <h3>The people need you</h3>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"/>
+        <div class="signin-right">
+            <div class="siginright-details">
+                <h1 class="signinright-h1">Show Up</h1>
+                <!-- <div class="input-div">
+                    <input type="text" class="signin-input">
+                    <input type="password" class="signin-input">
+                    <button class="blackbtn signin-btn">Get Access</button>
+                </div> -->
+                <form method="POST">
+                    <div class="form-group">
+                        <!-- <label for="email">Email Address</label> -->
+                        <input type="email" class="signin-input" id="email" name="email" placeholder="Enter email-address"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="signin-input" id="password" name="password" placeholder="Enter password"/>
+                    </div>
+                    <br/>
+                    <button type="submit" class="blackbtn signin-btn">Get Access</button>
+                </form>
+            </div>
         </div>
-        <br/>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
