--- a/Healthify/templates/signup.html
+++ b/Healthify/templates/signup.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Healthify-SignUp</title>
+    <link href="../static/css/nav.css" rel="stylesheet">
+    <link href="../static/css/index.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
@@ -27,27 +29,46 @@
       </div>
       {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-    <form method="POST">
-        <h3>Sign-Up</h3>
-        <div class="form-group">
-            <label for="email">Email Address</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email-address"/>
-        </div>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name"/>
-        </div>
-        <div class="form-group">
-            <label for="password1">Password</label>
-            <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password"/>
-        </div>
-        <div class="form-group">
-            <label for="password2">Password(Confirm)</label>
-            <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password"/>
-        </div>
-        <br/>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    
+
+    <section class="signin">
+      <div class="signin-left">
+          <div class="signinleft-details">
+              <h1 class="signinleft-h1">Doctors</h1>
+              <h1 class="signinleft-h1">Assemble !</h1>
+              <h3>The people need you</h3>
+          </div>
+      </div>
+      <div class="signin-right">
+          <div class="siginright-details">
+              <h1 class="signinright-h1">Show Up</h1>
+              <!-- <div class="input-div">
+                  <input type="text" class="signin-input">
+                  <input type="password" class="signin-input">
+                  <button class="blackbtn signin-btn">Get Access</button>
+              </div> -->
+              <form method="POST">
+                <div class="form-group">
+                    <input type="email" class="signup-input" id="email" name="email" placeholder="Enter email-address"/>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="signup-input" id="name" name="name" placeholder="Enter Name"/>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="signup-input" id="doctype" name="doctype" placeholder="Type of Doctor"/>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="signup-input" id="password1" name="password1" placeholder="Enter password"/>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="signup-input" id="password2" name="password2" placeholder="Confirm password"/>
+                </div>
+                <br/>
+                <button type="submit" class="blackbtn signup-btn">Submit</button>
+            </form>
+          </div>
+      </div>
+  </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
