form page ui done

--- a/Healthify/templates/index.html
+++ b/Healthify/templates/index.html
@@ -47,7 +47,7 @@
         <p class="landingpara">We beleive an early diagnosis opens the<br>door to future care and treatment.</p>
         <div class="landing-btns">
             <button class="whitebtn">Predict Now</button>
-            <button class="blackbtn">I am a Doctor</button>
+            <a href="/signup" class="blackbtn">I am a Doctor</a>
         </div>
     </section>
 
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="about-right">
-            <!-- illustration  -->
+            <img src="../static/img/aboutus.png" width="600px" height="600px">
         </div>
     </section>
 
