--- a/Healthify/static/css/index.css
+++ b/Healthify/static/css/index.css
@@ -28,6 +28,9 @@
 }
 
 .blackbtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: black;
     color: white;
     height: 54px;
@@ -35,6 +38,11 @@
     border-radius: 50px;
     font-size: 20px;
     margin-left: 25px;
+    text-decoration: none;
+}
+
+.blackbtn:hover{
+    color: white;
 }
 
 /* about */
@@ -57,6 +65,8 @@
 
 .about-right{
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 50%;
     height: 100%;
     /* background-color: antiquewhite; */
