--- a/Healthify/templates/predict_form.html
+++ b/Healthify/templates/predict_form.html
@@ -15,7 +15,7 @@
     <nav class="navbar bg-light">
         <div class="container navcontainer">
             <img>
-            <a>Abput</a>
+            <a>About</a>
             <a>Doctors</a>
             <a>Features</a>
             <a>Contact Us</a>
