--- a/Healthify/templates/predict_form.html
+++ b/Healthify/templates/predict_form.html
@@ -25,7 +25,7 @@
 
     <section class="form_section">
         <div class="form-box">
-            <form action="shortenurl" class="form">
+            <form class="form" action='/result' method="POST">
                 <div class="form-div">
                     <div class="form-left">
                         <label class="form-label" for="name">Full name</label>
@@ -38,7 +38,7 @@
                     <div class="form-right">
                         <label class="form-label" for="symptoms">Choose your appropriate symptoms:</label>
                             <!-- <input list="symptoms"> -->
-                            <select class="symptoms-select" id="symptoms" multiple onchange="myFunction()" >
+                            <select class="symptoms-select" id="symptoms" name='symptoms[]' multiple>
                                 <option value="itching">itching</option>
                                 <option value="skin_rash">skin_rash</option>
                                 <option value="chills">chills</option>
@@ -69,24 +69,26 @@
                                 <option value="loss_of_balance">loss_of_balance</option>
                                 <option value="muscle_pain">muscle_pain</option>
                             </select>
-                            <script>
-                                function myFunction() {
-                                    let x=[]
-                                   x.push(document.getElementById("symptoms").value);
-                                   //for(let i = 0 ;i<x.length;i++){console.log(x[i]);}
-                                    //console.log(x)
-                                  //console.log("hi")
-                                  var y=document.getElementById("symptoms").value
-                                  console.log(y)
-                                }
-                                </script>
                     </div>
                 </div>
-                <button class="blackbtn form-btn">Submit</button>
+                <button class="blackbtn form-btn" name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
             </form>
         </div>
     </section>
 
+    <!-- <script>
+        function myFunction() {
+            let x=[]
+           x.push(document.getElementById("symptoms").value);
+           //for(let i = 0 ;i<x.length;i++){console.log(x[i]);}
+            //console.log(x)
+          //console.log("hi")
+          var y=document.getElementById("symptoms").value
+          console.log(y)
+        }
+        
+        </script> -->
+    <script src="../static/js/arr.js"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
