mailing feature working

--- a/Healthify/templates/result.html
+++ b/Healthify/templates/result.html
@@ -28,7 +28,7 @@
         <div class="result-left">
             <!-- prediction result  -->
             <div class="result-left-predict">
-                <h1>According to our prediction you have x% of having </h1>
+                <h1>According to our prediction you have {{prediction}} of having </h1>
             </div>
             <!-- medicines  -->
             <div class="result-left-medicine">
