--- a/Healthify/templates/index.html
+++ b/Healthify/templates/index.html
@@ -13,12 +13,12 @@
     <!-- Navbar  -->
     <nav class="navbar bg-light">
         <div class="container navcontainer">
-            <img src="../static/img/logo.png" width="110px">
+            <a href="/"><img src="../static/img/logo.png" width="110px"></a>
             <a href="#about">About</a>
             <a href="/login">Doctors</a>
             <a href="#features">Features</a>
             <a href="#footer">Contact Us</a>
-            <button class="whitebtn">Predict Now</button>
+            <a class="whitebtn" href="/form">Predict Now</a>
         </div>
     </nav>
 
