--- a/Healthify/templates/predict_form.html
+++ b/Healthify/templates/predict_form.html
@@ -14,11 +14,11 @@
     <!-- Navbar  -->
     <nav class="navbar bg-light">
         <div class="container navcontainer">
-            <img>
-            <a>About</a>
-            <a>Doctors</a>
-            <a>Features</a>
-            <a>Contact Us</a>
+            <a href="/"><img src="../static/img/logo.png" width="110px"></a>
+            <a href="/#about">About</a>
+            <a href="/login">Doctors</a>
+            <a href="/#features">Features</a>
+            <a href="#footer">Contact Us</a>
             <button class="whitebtn">Predict Now</button>
         </div>
     </nav>
@@ -76,18 +76,30 @@
         </div>
     </section>
 
-    <!-- <script>
-        function myFunction() {
-            let x=[]
-           x.push(document.getElementById("symptoms").value);
-           //for(let i = 0 ;i<x.length;i++){console.log(x[i]);}
-            //console.log(x)
-          //console.log("hi")
-          var y=document.getElementById("symptoms").value
-          console.log(y)
-        }
-        
-        </script> -->
+    <!-- Footer  -->
+    <section class="footer" id="footer">
+        <div class="footer-section">
+            <div class="footer-left">
+                <img src="../static/img/logo.png" width="480px">
+            </div>
+            <div class="footer-right">
+                <h1 class="ourteam-h1">Our Team</h1>
+                <div class="team-detail">
+                    <img>
+                    <p>Aman Kumar</p>
+                </div>
+                <div class="team-detail">
+                    <img>
+                    <p>Hiya Dey Sarkar</p>
+                </div>
+                <div class="team-detail">
+                    <img>
+                    <p>Ishaan Gupta</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="../static/js/arr.js"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
