--- a/Healthify/templates/signin.html
+++ b/Healthify/templates/signin.html
@@ -55,6 +55,7 @@
                     </div>
                     <br/>
                     <button type="submit" class="blackbtn signin-btn">Get Access</button>
+                    <a class="sign-a" href="/signup">Sign Up</a>
                 </form>
             </div>
         </div>
