--- a/Healthify/templates/signup.html
+++ b/Healthify/templates/signup.html
@@ -65,6 +65,7 @@
                 </div>
                 <br/>
                 <button type="submit" class="blackbtn signup-btn">Submit</button>
+                <a class="sign-a" href="/login">Sign In</a>
             </form>
           </div>
       </div>
