--- a/Healthify/templates/index.html
+++ b/Healthify/templates/index.html
@@ -78,6 +78,7 @@
                 <h1 class="signinleft-h1">Doctors</h1>
                 <h1 class="signinleft-h1">Assemble !</h1>
                 <h3>The people need you</h3>
+                <img src="../static/img/landing_assemble.png" width="500px">
             </div>
         </div>
         <div class="signin-right">
@@ -103,16 +104,16 @@
         <h1 class="features_h1">Why <b>We Care ?</b></h1>
         <div class="featurescards-section">
             <div class="features-card">
-                <img>
-                <p>Feature 1</p>
+                <div class="circle one">1</div>
+                <p class="feature-p">Our website can predict up to 40 diseases from the symptoms provided by you with a high accuracy of over 90%</p>
             </div>
             <div class="features-card right-card">
-                <p>Feature 2</p>
-                <img>
+                <p class="feature-p">Our website also has a separate section where doctors can register themselves and patients will see these registered doctors if they wish to know about the specialists of the disease they encounter</p>
+                <div class="circle two">2</div>
             </div>
             <div class="features-card">
-                <img>
-                <p>Feature 3</p>
+                <div class="circle three">3</div>
+                <p class="feature-p">For future reference the patients will receive an email from our websites about their prediction</p>
             </div>
         </div>
     </section>
