--- a/Healthify/templates/result.html
+++ b/Healthify/templates/result.html
@@ -25,26 +25,48 @@
 
     <!-- Result  -->
     <div class="result">
-        <div class="result-left">
-            <!-- prediction result  -->
-            <div class="result-left-predict">
-                <h1>According to our prediction you have {{prediction}}</h1>
+            <div class="signin-left">
+                <div class="signinleft-details">
+                    <img src="../static/img/result.png" width="650px">
+                </div>
             </div>
-            <!-- medicines  -->
+            <div class="signin-right">
+                <div class="prediction-container">
+                    <h1 class="result-left-h1">According to our prediction you may have chances of having</h1>
+                    <h1 class="prediction-h1">{{prediction}}</h1>
+                </div>
+                <div class="doctor-container">
+                    <h1 class="resutl-left-h1">Suggested Doctors</h1>
+                    <div class="doctor-div">
+                        <p class="doctor-name">Dr. Narayan Murthi</p>
+                    </div>
+                    <div class="doctor-div">
+                        <p class="doctor-name">Dr. Amit Jain</p>
+                    </div>  
+
+                </div>
+            </div>
+        <!-- <div class="result-left">
+            
+            <div class="result-left-predict">
+                <h1 class="result-left-h1">According to our prediction you may have chances of having</h1>
+                <h1>{{prediction}}</h1>
+            </div>
+        
             <div class="result-left-medicine">
                 Coming Soon !
             </div>
         </div>
         <div class="result-right">
-            <!-- doctors  -->
+            
             <div class="result-right-doctor">
 
             </div>
-            <!-- hospitals  -->
+            
             <div class="result-right-hospitals">
                 Coming Soon
             </div>
-        </div>
+        </div> -->
 
     </div>
 
