--- a/Healthify/templates/signup.html
+++ b/Healthify/templates/signup.html
@@ -37,6 +37,7 @@
               <h1 class="signinleft-h1">Doctors</h1>
               <h1 class="signinleft-h1">Assemble !</h1>
               <h3>The people need you</h3>
+              <img src="../static/img/docassemble.png" width="600px">
           </div>
       </div>
       <div class="signin-right">
