--- a/Healthify/static/css/index.css
+++ b/Healthify/static/css/index.css
@@ -242,11 +242,41 @@
     /* background-color: blue; */
     border-radius: 25px;
     border: 1px solid black;
+    align-items: center;
+    /* justify-content: center; */
 }
 
 .right-card{
     display: flex;
     margin-left: 40%;
+}
+
+.circle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+    color: white;
+    border-radius: 50px;
+    width: 120px;
+    height: 90px;
+    background-color: #7B2ECC;
+    margin-left: 15px;
+}
+
+.two{
+    margin-left: 0px;
+    margin-right: 10px;
+    width: 200px;
+}
+
+.three{
+    width: 100px;
+}
+
+.feature-p{
+    font-size: 18px;
+    margin-left: 10px;
 }
 
 /* footer  */
