--- a/Healthify/templates/doctor_dashboard.html
+++ b/Healthify/templates/doctor_dashboard.html
@@ -4,10 +4,37 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>We Care - Doc Dashboard</title>
+    <link href="../static/css/nav.css" rel="stylesheet">
+    <link href="../static/css/index.css" rel="stylesheet">
+    <link href="../static/css/dashboard.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Doctors Dashboard</h1>
+    <section>
+      <div class="dashboard-main">
+        <div class="side-nav">
+          <a href="/"><img src="../static/img/logo.png" width="150px"></a>
+        </div>
+        <div class="main-area">
+          <div class="box1">
+            <h1>Doctors Dashboard</h1>
+            <p>Coming Soon</p>
+          </div>
+          <div class="box2"> 
+            <div class="innerbox">
+
+            </div>
+            <div class="innerbox">
+
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </section>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
